syntax = "proto3";

option csharp_namespace = "Pgcode.Protos";

package test;

service TestService {
	rpc HelloWorld (HelloWorldRequest) returns (HelloWorld2Reply);
}

message HelloWorldRequest {
	string param = 1;
}

message HelloWorld2Reply {
	string content = 1;
}